asm/pdp8asm.output
State 0 conflicts: 32 shift/reduce, 1 reduce/reduce
State 48 conflicts: 32 shift/reduce, 1 reduce/reduce
State 57 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 exp: e1 '+' exp
    2    | e1 '-' exp
    3    | e1

    4 e1: e2 '*' exp
    5   | e2 '/' exp
    6   | e2

    7 e2: '+' e2
    8   | '-' e2
    9   | '(' exp ')'
   10   | t_value

   11 mem: t_name
   12    | exp

   13 memr: mem
   14     | t_i mem
   15     | t_z mem
   16     | t_i t_z mem
   17     | t_z t_i mem

   18 io: t_tsf
   19   | t_tcf
   20   | t_tpc
   21   | t_ion
   22   | t_iof
   23   | t_skon
   24   | t_caf

   25 ins: t_and memr
   26    | t_tad memr
   27    | t_isz memr
   28    | t_dca memr
   29    | t_jms memr
   30    | t_jmp memr
   31    | io
   32    | opr
   33    | '.' t_word exp
   34    | '.' t_word t_name '+' exp

   35 opr: t_cla group1
   36    | t_cla group2
   37    | t_cla
   38    | group1
   39    | group2

   40 g1: t_cll
   41   | t_cma
   42   | t_cml
   43   | t_rar
   44   | t_ral
   45   | t_rtr
   46   | t_rtl
   47   | t_bsw
   48   | t_iac

   49 group1: g1
   50       | group1 g1

   51 g2a1: t_sma
   52     | t_sza
   53     | t_snl

   54 g2a2: t_skp
   55     | t_spa
   56     | t_sna
   57     | t_szl

   58 g2a1l: g2a1
   59      | g2a1l g2a1

   60 g2a2l: g2a2
   61      | g2a2l g2a2

   62 group2: g2a1l
   63       | g2a2l
   64       | t_hlt
   65       | g2a1l t_hlt
   66       | g2a2l t_hlt

   67 lname: t_name

   68 label: lname ':'
   69      | ε

   70 line: label ins_e t_nl
   71     | ins_e t_nl
   72     | '.' '=' exp
   73     | '.' '=' '.' '+' exp
   74     | '.' t_page

   75 ins_e: ins
   76      | ε

   77 program: line
   78        | program line


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 9
    ')' (41) 9
    '*' (42) 4
    '+' (43) 1 7 34 73
    '-' (45) 2 8
    '.' (46) 33 34 72 73 74
    '/' (47) 5
    ':' (58) 68
    '=' (61) 72 73
    error (256)
    t_i (258) 14 16 17
    t_z (259) 15 16 17
    t_name (260) 11 34 67
    t_value (261) 10
    t_cll (262) 40
    t_cml (263) 42
    t_rar (264) 43
    t_ral (265) 44
    t_rtr (266) 45
    t_rtl (267) 46
    t_bsw (268) 47
    t_and (269) 25
    t_tad (270) 26
    t_isz (271) 27
    t_dca (272) 28
    t_jms (273) 29
    t_jmp (274) 30
    t_word (275) 33 34
    t_hlt (276) 64 65 66
    t_szl (277) 57
    t_sna (278) 56
    t_skp (279) 54
    t_snl (280) 53
    t_sza (281) 52
    t_sma (282) 51
    t_spa (283) 55
    t_nl (284) 70 71
    t_page (285) 74
    t_cla (286) 35 36 37
    t_ion (287) 21
    t_iof (288) 22
    t_caf (289) 24
    t_skon (290) 23
    t_tcf (291) 19
    t_tsf (292) 18
    t_tpc (293) 20
    t_iac (294) 48
    t_cma (295) 41


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    exp (51)
        on left: 1 2 3
        on right: 1 2 4 5 9 12 33 34 72 73
    e1 (52)
        on left: 4 5 6
        on right: 1 2 3
    e2 (53)
        on left: 7 8 9 10
        on right: 4 5 6 7 8
    mem (54)
        on left: 11 12
        on right: 13 14 15 16 17
    memr (55)
        on left: 13 14 15 16 17
        on right: 25 26 27 28 29 30
    io (56)
        on left: 18 19 20 21 22 23 24
        on right: 31
    ins (57)
        on left: 25 26 27 28 29 30 31 32 33 34
        on right: 75
    opr (58)
        on left: 35 36 37 38 39
        on right: 32
    g1 (59)
        on left: 40 41 42 43 44 45 46 47 48
        on right: 49 50
    group1 (60)
        on left: 49 50
        on right: 35 38 50
    g2a1 (61)
        on left: 51 52 53
        on right: 58 59
    g2a2 (62)
        on left: 54 55 56 57
        on right: 60 61
    g2a1l (63)
        on left: 58 59
        on right: 59 62 65
    g2a2l (64)
        on left: 60 61
        on right: 61 63 66
    group2 (65)
        on left: 62 63 64 65 66
        on right: 36 39
    lname (66)
        on left: 67
        on right: 68
    label (67)
        on left: 68 69
        on right: 70
    line (68)
        on left: 70 71 72 73 74
        on right: 77 78
    ins_e (69)
        on left: 75 76
        on right: 70 71
    program (70)
        on left: 77 78
        on right: 0 78


State 0

    0 $accept: • program $end

    t_name  shift, and go to state 1
    t_cll   shift, and go to state 2
    t_cml   shift, and go to state 3
    t_rar   shift, and go to state 4
    t_ral   shift, and go to state 5
    t_rtr   shift, and go to state 6
    t_rtl   shift, and go to state 7
    t_bsw   shift, and go to state 8
    t_and   shift, and go to state 9
    t_tad   shift, and go to state 10
    t_isz   shift, and go to state 11
    t_dca   shift, and go to state 12
    t_jms   shift, and go to state 13
    t_jmp   shift, and go to state 14
    t_hlt   shift, and go to state 15
    t_szl   shift, and go to state 16
    t_sna   shift, and go to state 17
    t_skp   shift, and go to state 18
    t_snl   shift, and go to state 19
    t_sza   shift, and go to state 20
    t_sma   shift, and go to state 21
    t_spa   shift, and go to state 22
    t_cla   shift, and go to state 23
    t_ion   shift, and go to state 24
    t_iof   shift, and go to state 25
    t_caf   shift, and go to state 26
    t_skon  shift, and go to state 27
    t_tcf   shift, and go to state 28
    t_tsf   shift, and go to state 29
    t_tpc   shift, and go to state 30
    t_iac   shift, and go to state 31
    t_cma   shift, and go to state 32
    '.'     shift, and go to state 33

    t_cll     [reduce using rule 69 (label)]
    t_cml     [reduce using rule 69 (label)]
    t_rar     [reduce using rule 69 (label)]
    t_ral     [reduce using rule 69 (label)]
    t_rtr     [reduce using rule 69 (label)]
    t_rtl     [reduce using rule 69 (label)]
    t_bsw     [reduce using rule 69 (label)]
    t_and     [reduce using rule 69 (label)]
    t_tad     [reduce using rule 69 (label)]
    t_isz     [reduce using rule 69 (label)]
    t_dca     [reduce using rule 69 (label)]
    t_jms     [reduce using rule 69 (label)]
    t_jmp     [reduce using rule 69 (label)]
    t_hlt     [reduce using rule 69 (label)]
    t_szl     [reduce using rule 69 (label)]
    t_sna     [reduce using rule 69 (label)]
    t_skp     [reduce using rule 69 (label)]
    t_snl     [reduce using rule 69 (label)]
    t_sza     [reduce using rule 69 (label)]
    t_sma     [reduce using rule 69 (label)]
    t_spa     [reduce using rule 69 (label)]
    t_nl      reduce using rule 69 (label)
    t_nl      [reduce using rule 76 (ins_e)]
    t_cla     [reduce using rule 69 (label)]
    t_ion     [reduce using rule 69 (label)]
    t_iof     [reduce using rule 69 (label)]
    t_caf     [reduce using rule 69 (label)]
    t_skon    [reduce using rule 69 (label)]
    t_tcf     [reduce using rule 69 (label)]
    t_tsf     [reduce using rule 69 (label)]
    t_tpc     [reduce using rule 69 (label)]
    t_iac     [reduce using rule 69 (label)]
    t_cma     [reduce using rule 69 (label)]
    '.'       [reduce using rule 69 (label)]
    $default  reduce using rule 69 (label)

    io       go to state 34
    ins      go to state 35
    opr      go to state 36
    g1       go to state 37
    group1   go to state 38
    g2a1     go to state 39
    g2a2     go to state 40
    g2a1l    go to state 41
    g2a2l    go to state 42
    group2   go to state 43
    lname    go to state 44
    label    go to state 45
    line     go to state 46
    ins_e    go to state 47
    program  go to state 48


State 1

   67 lname: t_name •

    $default  reduce using rule 67 (lname)


State 2

   40 g1: t_cll •

    $default  reduce using rule 40 (g1)


State 3

   42 g1: t_cml •

    $default  reduce using rule 42 (g1)


State 4

   43 g1: t_rar •

    $default  reduce using rule 43 (g1)


State 5

   44 g1: t_ral •

    $default  reduce using rule 44 (g1)


State 6

   45 g1: t_rtr •

    $default  reduce using rule 45 (g1)


State 7

   46 g1: t_rtl •

    $default  reduce using rule 46 (g1)


State 8

   47 g1: t_bsw •

    $default  reduce using rule 47 (g1)


State 9

   25 ins: t_and • memr

    t_i      shift, and go to state 49
    t_z      shift, and go to state 50
    t_name   shift, and go to state 51
    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp   go to state 56
    e1    go to state 57
    e2    go to state 58
    mem   go to state 59
    memr  go to state 60


State 10

   26 ins: t_tad • memr

    t_i      shift, and go to state 49
    t_z      shift, and go to state 50
    t_name   shift, and go to state 51
    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp   go to state 56
    e1    go to state 57
    e2    go to state 58
    mem   go to state 59
    memr  go to state 61


State 11

   27 ins: t_isz • memr

    t_i      shift, and go to state 49
    t_z      shift, and go to state 50
    t_name   shift, and go to state 51
    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp   go to state 56
    e1    go to state 57
    e2    go to state 58
    mem   go to state 59
    memr  go to state 62


State 12

   28 ins: t_dca • memr

    t_i      shift, and go to state 49
    t_z      shift, and go to state 50
    t_name   shift, and go to state 51
    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp   go to state 56
    e1    go to state 57
    e2    go to state 58
    mem   go to state 59
    memr  go to state 63


State 13

   29 ins: t_jms • memr

    t_i      shift, and go to state 49
    t_z      shift, and go to state 50
    t_name   shift, and go to state 51
    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp   go to state 56
    e1    go to state 57
    e2    go to state 58
    mem   go to state 59
    memr  go to state 64


State 14

   30 ins: t_jmp • memr

    t_i      shift, and go to state 49
    t_z      shift, and go to state 50
    t_name   shift, and go to state 51
    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp   go to state 56
    e1    go to state 57
    e2    go to state 58
    mem   go to state 59
    memr  go to state 65


State 15

   64 group2: t_hlt •

    $default  reduce using rule 64 (group2)


State 16

   57 g2a2: t_szl •

    $default  reduce using rule 57 (g2a2)


State 17

   56 g2a2: t_sna •

    $default  reduce using rule 56 (g2a2)


State 18

   54 g2a2: t_skp •

    $default  reduce using rule 54 (g2a2)


State 19

   53 g2a1: t_snl •

    $default  reduce using rule 53 (g2a1)


State 20

   52 g2a1: t_sza •

    $default  reduce using rule 52 (g2a1)


State 21

   51 g2a1: t_sma •

    $default  reduce using rule 51 (g2a1)


State 22

   55 g2a2: t_spa •

    $default  reduce using rule 55 (g2a2)


State 23

   35 opr: t_cla • group1
   36    | t_cla • group2
   37    | t_cla •

    t_cll  shift, and go to state 2
    t_cml  shift, and go to state 3
    t_rar  shift, and go to state 4
    t_ral  shift, and go to state 5
    t_rtr  shift, and go to state 6
    t_rtl  shift, and go to state 7
    t_bsw  shift, and go to state 8
    t_hlt  shift, and go to state 15
    t_szl  shift, and go to state 16
    t_sna  shift, and go to state 17
    t_skp  shift, and go to state 18
    t_snl  shift, and go to state 19
    t_sza  shift, and go to state 20
    t_sma  shift, and go to state 21
    t_spa  shift, and go to state 22
    t_iac  shift, and go to state 31
    t_cma  shift, and go to state 32

    $default  reduce using rule 37 (opr)

    g1      go to state 37
    group1  go to state 66
    g2a1    go to state 39
    g2a2    go to state 40
    g2a1l   go to state 41
    g2a2l   go to state 42
    group2  go to state 67


State 24

   21 io: t_ion •

    $default  reduce using rule 21 (io)


State 25

   22 io: t_iof •

    $default  reduce using rule 22 (io)


State 26

   24 io: t_caf •

    $default  reduce using rule 24 (io)


State 27

   23 io: t_skon •

    $default  reduce using rule 23 (io)


State 28

   19 io: t_tcf •

    $default  reduce using rule 19 (io)


State 29

   18 io: t_tsf •

    $default  reduce using rule 18 (io)


State 30

   20 io: t_tpc •

    $default  reduce using rule 20 (io)


State 31

   48 g1: t_iac •

    $default  reduce using rule 48 (g1)


State 32

   41 g1: t_cma •

    $default  reduce using rule 41 (g1)


State 33

   33 ins: '.' • t_word exp
   34    | '.' • t_word t_name '+' exp
   72 line: '.' • '=' exp
   73     | '.' • '=' '.' '+' exp
   74     | '.' • t_page

    t_word  shift, and go to state 68
    t_page  shift, and go to state 69
    '='     shift, and go to state 70


State 34

   31 ins: io •

    $default  reduce using rule 31 (ins)


State 35

   75 ins_e: ins •

    $default  reduce using rule 75 (ins_e)


State 36

   32 ins: opr •

    $default  reduce using rule 32 (ins)


State 37

   49 group1: g1 •

    $default  reduce using rule 49 (group1)


State 38

   38 opr: group1 •
   50 group1: group1 • g1

    t_cll  shift, and go to state 2
    t_cml  shift, and go to state 3
    t_rar  shift, and go to state 4
    t_ral  shift, and go to state 5
    t_rtr  shift, and go to state 6
    t_rtl  shift, and go to state 7
    t_bsw  shift, and go to state 8
    t_iac  shift, and go to state 31
    t_cma  shift, and go to state 32

    $default  reduce using rule 38 (opr)

    g1  go to state 71


State 39

   58 g2a1l: g2a1 •

    $default  reduce using rule 58 (g2a1l)


State 40

   60 g2a2l: g2a2 •

    $default  reduce using rule 60 (g2a2l)


State 41

   59 g2a1l: g2a1l • g2a1
   62 group2: g2a1l •
   65       | g2a1l • t_hlt

    t_hlt  shift, and go to state 72
    t_snl  shift, and go to state 19
    t_sza  shift, and go to state 20
    t_sma  shift, and go to state 21

    $default  reduce using rule 62 (group2)

    g2a1  go to state 73


State 42

   61 g2a2l: g2a2l • g2a2
   63 group2: g2a2l •
   66       | g2a2l • t_hlt

    t_hlt  shift, and go to state 74
    t_szl  shift, and go to state 16
    t_sna  shift, and go to state 17
    t_skp  shift, and go to state 18
    t_spa  shift, and go to state 22

    $default  reduce using rule 63 (group2)

    g2a2  go to state 75


State 43

   39 opr: group2 •

    $default  reduce using rule 39 (opr)


State 44

   68 label: lname • ':'

    ':'  shift, and go to state 76


State 45

   70 line: label • ins_e t_nl

    t_cll   shift, and go to state 2
    t_cml   shift, and go to state 3
    t_rar   shift, and go to state 4
    t_ral   shift, and go to state 5
    t_rtr   shift, and go to state 6
    t_rtl   shift, and go to state 7
    t_bsw   shift, and go to state 8
    t_and   shift, and go to state 9
    t_tad   shift, and go to state 10
    t_isz   shift, and go to state 11
    t_dca   shift, and go to state 12
    t_jms   shift, and go to state 13
    t_jmp   shift, and go to state 14
    t_hlt   shift, and go to state 15
    t_szl   shift, and go to state 16
    t_sna   shift, and go to state 17
    t_skp   shift, and go to state 18
    t_snl   shift, and go to state 19
    t_sza   shift, and go to state 20
    t_sma   shift, and go to state 21
    t_spa   shift, and go to state 22
    t_cla   shift, and go to state 23
    t_ion   shift, and go to state 24
    t_iof   shift, and go to state 25
    t_caf   shift, and go to state 26
    t_skon  shift, and go to state 27
    t_tcf   shift, and go to state 28
    t_tsf   shift, and go to state 29
    t_tpc   shift, and go to state 30
    t_iac   shift, and go to state 31
    t_cma   shift, and go to state 32
    '.'     shift, and go to state 77

    $default  reduce using rule 76 (ins_e)

    io      go to state 34
    ins     go to state 35
    opr     go to state 36
    g1      go to state 37
    group1  go to state 38
    g2a1    go to state 39
    g2a2    go to state 40
    g2a1l   go to state 41
    g2a2l   go to state 42
    group2  go to state 43
    ins_e   go to state 78


State 46

   77 program: line •

    $default  reduce using rule 77 (program)


State 47

   71 line: ins_e • t_nl

    t_nl  shift, and go to state 79


State 48

    0 $accept: program • $end
   78 program: program • line

    $end    shift, and go to state 80
    t_name  shift, and go to state 1
    t_cll   shift, and go to state 2
    t_cml   shift, and go to state 3
    t_rar   shift, and go to state 4
    t_ral   shift, and go to state 5
    t_rtr   shift, and go to state 6
    t_rtl   shift, and go to state 7
    t_bsw   shift, and go to state 8
    t_and   shift, and go to state 9
    t_tad   shift, and go to state 10
    t_isz   shift, and go to state 11
    t_dca   shift, and go to state 12
    t_jms   shift, and go to state 13
    t_jmp   shift, and go to state 14
    t_hlt   shift, and go to state 15
    t_szl   shift, and go to state 16
    t_sna   shift, and go to state 17
    t_skp   shift, and go to state 18
    t_snl   shift, and go to state 19
    t_sza   shift, and go to state 20
    t_sma   shift, and go to state 21
    t_spa   shift, and go to state 22
    t_cla   shift, and go to state 23
    t_ion   shift, and go to state 24
    t_iof   shift, and go to state 25
    t_caf   shift, and go to state 26
    t_skon  shift, and go to state 27
    t_tcf   shift, and go to state 28
    t_tsf   shift, and go to state 29
    t_tpc   shift, and go to state 30
    t_iac   shift, and go to state 31
    t_cma   shift, and go to state 32
    '.'     shift, and go to state 33

    t_cll     [reduce using rule 69 (label)]
    t_cml     [reduce using rule 69 (label)]
    t_rar     [reduce using rule 69 (label)]
    t_ral     [reduce using rule 69 (label)]
    t_rtr     [reduce using rule 69 (label)]
    t_rtl     [reduce using rule 69 (label)]
    t_bsw     [reduce using rule 69 (label)]
    t_and     [reduce using rule 69 (label)]
    t_tad     [reduce using rule 69 (label)]
    t_isz     [reduce using rule 69 (label)]
    t_dca     [reduce using rule 69 (label)]
    t_jms     [reduce using rule 69 (label)]
    t_jmp     [reduce using rule 69 (label)]
    t_hlt     [reduce using rule 69 (label)]
    t_szl     [reduce using rule 69 (label)]
    t_sna     [reduce using rule 69 (label)]
    t_skp     [reduce using rule 69 (label)]
    t_snl     [reduce using rule 69 (label)]
    t_sza     [reduce using rule 69 (label)]
    t_sma     [reduce using rule 69 (label)]
    t_spa     [reduce using rule 69 (label)]
    t_nl      reduce using rule 69 (label)
    t_nl      [reduce using rule 76 (ins_e)]
    t_cla     [reduce using rule 69 (label)]
    t_ion     [reduce using rule 69 (label)]
    t_iof     [reduce using rule 69 (label)]
    t_caf     [reduce using rule 69 (label)]
    t_skon    [reduce using rule 69 (label)]
    t_tcf     [reduce using rule 69 (label)]
    t_tsf     [reduce using rule 69 (label)]
    t_tpc     [reduce using rule 69 (label)]
    t_iac     [reduce using rule 69 (label)]
    t_cma     [reduce using rule 69 (label)]
    '.'       [reduce using rule 69 (label)]
    $default  reduce using rule 69 (label)

    io      go to state 34
    ins     go to state 35
    opr     go to state 36
    g1      go to state 37
    group1  go to state 38
    g2a1    go to state 39
    g2a2    go to state 40
    g2a1l   go to state 41
    g2a2l   go to state 42
    group2  go to state 43
    lname   go to state 44
    label   go to state 45
    line    go to state 81
    ins_e   go to state 47


State 49

   14 memr: t_i • mem
   16     | t_i • t_z mem

    t_z      shift, and go to state 82
    t_name   shift, and go to state 51
    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp  go to state 56
    e1   go to state 57
    e2   go to state 58
    mem  go to state 83


State 50

   15 memr: t_z • mem
   17     | t_z • t_i mem

    t_i      shift, and go to state 84
    t_name   shift, and go to state 51
    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp  go to state 56
    e1   go to state 57
    e2   go to state 58
    mem  go to state 85


State 51

   11 mem: t_name •

    $default  reduce using rule 11 (mem)


State 52

   10 e2: t_value •

    $default  reduce using rule 10 (e2)


State 53

    7 e2: '+' • e2

    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    e2  go to state 86


State 54

    8 e2: '-' • e2

    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    e2  go to state 87


State 55

    9 e2: '(' • exp ')'

    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp  go to state 88
    e1   go to state 57
    e2   go to state 58


State 56

   12 mem: exp •

    $default  reduce using rule 12 (mem)


State 57

    1 exp: e1 • '+' exp
    2    | e1 • '-' exp
    3    | e1 •

    '+'  shift, and go to state 89
    '-'  shift, and go to state 90

    '+'       [reduce using rule 3 (exp)]
    '-'       [reduce using rule 3 (exp)]
    $default  reduce using rule 3 (exp)


State 58

    4 e1: e2 • '*' exp
    5   | e2 • '/' exp
    6   | e2 •

    '*'  shift, and go to state 91
    '/'  shift, and go to state 92

    $default  reduce using rule 6 (e1)


State 59

   13 memr: mem •

    $default  reduce using rule 13 (memr)


State 60

   25 ins: t_and memr •

    $default  reduce using rule 25 (ins)


State 61

   26 ins: t_tad memr •

    $default  reduce using rule 26 (ins)


State 62

   27 ins: t_isz memr •

    $default  reduce using rule 27 (ins)


State 63

   28 ins: t_dca memr •

    $default  reduce using rule 28 (ins)


State 64

   29 ins: t_jms memr •

    $default  reduce using rule 29 (ins)


State 65

   30 ins: t_jmp memr •

    $default  reduce using rule 30 (ins)


State 66

   35 opr: t_cla group1 •
   50 group1: group1 • g1

    t_cll  shift, and go to state 2
    t_cml  shift, and go to state 3
    t_rar  shift, and go to state 4
    t_ral  shift, and go to state 5
    t_rtr  shift, and go to state 6
    t_rtl  shift, and go to state 7
    t_bsw  shift, and go to state 8
    t_iac  shift, and go to state 31
    t_cma  shift, and go to state 32

    $default  reduce using rule 35 (opr)

    g1  go to state 71


State 67

   36 opr: t_cla group2 •

    $default  reduce using rule 36 (opr)


State 68

   33 ins: '.' t_word • exp
   34    | '.' t_word • t_name '+' exp

    t_name   shift, and go to state 93
    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp  go to state 94
    e1   go to state 57
    e2   go to state 58


State 69

   74 line: '.' t_page •

    $default  reduce using rule 74 (line)


State 70

   72 line: '.' '=' • exp
   73     | '.' '=' • '.' '+' exp

    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55
    '.'      shift, and go to state 95

    exp  go to state 96
    e1   go to state 57
    e2   go to state 58


State 71

   50 group1: group1 g1 •

    $default  reduce using rule 50 (group1)


State 72

   65 group2: g2a1l t_hlt •

    $default  reduce using rule 65 (group2)


State 73

   59 g2a1l: g2a1l g2a1 •

    $default  reduce using rule 59 (g2a1l)


State 74

   66 group2: g2a2l t_hlt •

    $default  reduce using rule 66 (group2)


State 75

   61 g2a2l: g2a2l g2a2 •

    $default  reduce using rule 61 (g2a2l)


State 76

   68 label: lname ':' •

    $default  reduce using rule 68 (label)


State 77

   33 ins: '.' • t_word exp
   34    | '.' • t_word t_name '+' exp

    t_word  shift, and go to state 68


State 78

   70 line: label ins_e • t_nl

    t_nl  shift, and go to state 97


State 79

   71 line: ins_e t_nl •

    $default  reduce using rule 71 (line)


State 80

    0 $accept: program $end •

    $default  accept


State 81

   78 program: program line •

    $default  reduce using rule 78 (program)


State 82

   16 memr: t_i t_z • mem

    t_name   shift, and go to state 51
    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp  go to state 56
    e1   go to state 57
    e2   go to state 58
    mem  go to state 98


State 83

   14 memr: t_i mem •

    $default  reduce using rule 14 (memr)


State 84

   17 memr: t_z t_i • mem

    t_name   shift, and go to state 51
    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp  go to state 56
    e1   go to state 57
    e2   go to state 58
    mem  go to state 99


State 85

   15 memr: t_z mem •

    $default  reduce using rule 15 (memr)


State 86

    7 e2: '+' e2 •

    $default  reduce using rule 7 (e2)


State 87

    8 e2: '-' e2 •

    $default  reduce using rule 8 (e2)


State 88

    9 e2: '(' exp • ')'

    ')'  shift, and go to state 100


State 89

    1 exp: e1 '+' • exp

    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp  go to state 101
    e1   go to state 57
    e2   go to state 58


State 90

    2 exp: e1 '-' • exp

    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp  go to state 102
    e1   go to state 57
    e2   go to state 58


State 91

    4 e1: e2 '*' • exp

    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp  go to state 103
    e1   go to state 57
    e2   go to state 58


State 92

    5 e1: e2 '/' • exp

    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp  go to state 104
    e1   go to state 57
    e2   go to state 58


State 93

   34 ins: '.' t_word t_name • '+' exp

    '+'  shift, and go to state 105


State 94

   33 ins: '.' t_word exp •

    $default  reduce using rule 33 (ins)


State 95

   73 line: '.' '=' '.' • '+' exp

    '+'  shift, and go to state 106


State 96

   72 line: '.' '=' exp •

    $default  reduce using rule 72 (line)


State 97

   70 line: label ins_e t_nl •

    $default  reduce using rule 70 (line)


State 98

   16 memr: t_i t_z mem •

    $default  reduce using rule 16 (memr)


State 99

   17 memr: t_z t_i mem •

    $default  reduce using rule 17 (memr)


State 100

    9 e2: '(' exp ')' •

    $default  reduce using rule 9 (e2)


State 101

    1 exp: e1 '+' exp •

    $default  reduce using rule 1 (exp)


State 102

    2 exp: e1 '-' exp •

    $default  reduce using rule 2 (exp)


State 103

    4 e1: e2 '*' exp •

    $default  reduce using rule 4 (e1)


State 104

    5 e1: e2 '/' exp •

    $default  reduce using rule 5 (e1)


State 105

   34 ins: '.' t_word t_name '+' • exp

    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp  go to state 107
    e1   go to state 57
    e2   go to state 58


State 106

   73 line: '.' '=' '.' '+' • exp

    t_value  shift, and go to state 52
    '+'      shift, and go to state 53
    '-'      shift, and go to state 54
    '('      shift, and go to state 55

    exp  go to state 108
    e1   go to state 57
    e2   go to state 58


State 107

   34 ins: '.' t_word t_name '+' exp •

    $default  reduce using rule 34 (ins)


State 108

   73 line: '.' '=' '.' '+' exp •

    $default  reduce using rule 73 (line)
